--- a/packages/hello-vite/package.json
+++ b/packages/hello-vite/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "hello-vite",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "@vite-demos/hello-vite",
+  "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "vue": "^3.2.25"
+  },
+  "devDependencies": {
+    "typescript": "^4.5.4",
+    "vite": "^2.9.5"
+  }
 }
