--- a/packages/hello-vite/package.json
+++ b/packages/hello-vite/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.182",
+    "lodash": "^4.17.21",
     "vue": "^3.2.25"
   },
   "devDependencies": {
